script => counterek beepitve/finomhangolva

--- a/éles/index.html
+++ b/éles/index.html
@@ -9,6 +9,7 @@
   <body>
     <div>
       <h2>Megtalált hajó(k): <span id="counter">0</span>/7</h2>
+      <h2>Lépések száma: <span id="lepes">0</span></h2>
     </div>
     <section>
       <table class="tablazat" id="map" border="1"></table>
