Gamemode valasztas javitasra szorul

--- a/éles/index.html
+++ b/éles/index.html
@@ -11,6 +11,10 @@
       <h2>Megtalált hajó(k): <span id="counter">0</span>/7</h2>
       <h2>Lépések száma: <span id="lepes">0</span></h2>
     </div>
+    <div class="gamemodeSelector">
+      <button id="normalGame">Sima játék</button>
+      <button id="timeAttack">Time Attack</button>
+    </div>
     <section>
       <table class="tablazat" id="map" border="1"></table>
     </section>
