majdnem kesz => Design kell csak

--- a/éles/index.html
+++ b/éles/index.html
@@ -10,10 +10,12 @@
     <div>
       <h2>Megtalált hajó(k): <span id="counter">0</span>/7</h2>
       <h2>Lépések száma: <span id="lepes">0</span></h2>
+      
     </div>
+    <h6>(Az elemek forgatásához kattints a választott Játékmód gombjára)</h6>
     <div class="gamemodeSelector">
-      <button id="normalGame">Sima játék</button>
-      <button id="timeAttack">Time Attack</button>
+      <button class="normal" id="normalGame">Sima játék</button>
+      <button class="special" id="timeAttack">Time Attack</button>
     </div>
     <section>
       <table class="tablazat" id="map" border="1"></table>
