--- a/éles/index.html
+++ b/éles/index.html
@@ -13,12 +13,13 @@
       
     </div>
     <h6>(Az elemek forgatásához kattints a választott Játékmód gombjára)</h6>
+    <p class="figyelmeztetoText" style="color: red;">Valassz játékmódot az indításhoz mindig!!</p>
     <div class="gamemodeSelector">
       <button class="normal" id="normalGame">Sima játék</button>
       <button class="special" id="timeAttack">Time Attack</button>
     </div>
     <section>
-      <table class="tablazat" id="map" border="1"></table>
+      <table class="tablazat" id="map"></table>
     </section>
 
     <div class="game-over-overlay hidden" id="gameOver">
